# qen

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  INTEGRATION_TEST_OPTIMIZATION_SUMMARY.md  NEXT_STEPS.md  README.md  STANDARD_PRS_SETUP.md  main.py  poe  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: INTEGRATION_TESTING.md  MIGRATION_NO_MOCKS.md
proj/: README.md
scripts/: integration_test.py  version.py
spec/: 1-qen-init.md  2-testing.md  4-qen-status.md
spec/1-qen-init/: 3-pyproject.md
spec/2-status/: 01-qen-pull.md  05-qen-sh.md  06-integration-testing.md  07-repo-qen-test.md
spec/3-proj/: 03-add-force-idempotent.md  05-improve-meta-ux.md  06-qen-meta-integration.md  07-template-init.md  08-qen-wrapper.md
spec/4-tests/: auto-init-implementation.md  integration-test-failures-analysis.md  optimize-integration-tests.md  qen-rm-command.md
spec/5-clone/: 03-qen-clone-spec.md  07-test-fixture-refactoring-plan.md
spec/6-debt/: 01-scripts.md  02-qen-commands.md  03-qen-lib.md  04-qenvy.md  05-tests.md  06-config-refactor.md
src/qen/: __init__.py  cli.py  config.py  git_utils.py  init_utils.py  project.py  pyproject_utils.py  repo_utils.py
src/qenvy/: README.md  __init__.py  base.py  formats.py  storage.py
tests/: conftest.py
tests/fixtures/: github_fixtures.py
tests/helpers/: __init__.py  github_mock.py  qenvy_test.py  test_mock.py  test_qenvy_test.py
tests/integration/: __init__.py  conftest.py  constants.py  helpers.py  test_add.py  test_branch_checking.py  test_github_api_contract.py  test_github_schema.py  (+14 more)
(+48 files in other folders)
