[project]
name = "qen"
version = "0.1.1"
description = "A tiny, extensible tool for organizing multi-repository development work"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["multi-repo", "workflow", "development", "monorepo", "git"]
authors = [
    {name = "Ernest Prabhakar", email = "ernest@quilt.bio"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1.0",
    "platformdirs>=4.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/data-yaml/qen"
Repository = "https://github.com/data-yaml/qen"
Issues = "https://github.com/data-yaml/qen/issues"

[project.scripts]
qen = "qen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qen"]
